--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/contacto.css"/>
+    <link rel="stylesheet" href="../../public/css/linea-internet.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -51,39 +51,82 @@
 
 
 <div class="content">
-    <h1>Contacto</h1>
-    <div class="contacto-container">
-        <div class="contacto">
-            <img class="contacto-img" src="../../public/images/slider1.png" >
-            <div class="contacto-info-cont">
-                <h2>Garantía y soporte técnico</h2>
-                <div>
-                    <p>Puedes consultar el Servicio de Garantía y Soporte técnico a través de los siguientes medios:</p>
-                    <p>Teléfono: 900 410 773 (sólo clientes)</p>
-                    <p>Email: soporteclientes@telefonico.com</p>
-                </div>
+    <h1>Línea Internet</h1>
+    <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS INTERNET</strong></h2>
+    <div class="tarifas-lineas-internet">
+        <div class="tarifa-linea-internet">
+            <h3><strong>19,99 €/mes</strong></h3>
+            <div class="info-tarifa-linea-internet">
+              <img  src="../../public/images/header/linea-internet.png" alt="">
+              <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+            </div>
+          <button class="button">Contratar</button>
+        </div>
+        <div class="tarifa-linea-internet">
+          <h3><strong>29,99 €/mes</strong></h3>
+          <div class="info-tarifa-linea-internet">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
+      </div>
+      <div class="tarifa-linea-internet">
+          <h3><strong>49,99 €/mes</strong></h3>
+          <div class="info-tarifa-linea-internet">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
+      </div>
+    </div>
+    <div class="contacto-linea-internet-container">
+        <div class="contacto-linea-internet">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <div class="info-contact-lineas-internet">
+                <h3>Configura tu tarifa a tu medida</h3>
+                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de internet, de movil o de TV</p>
+            </div>
+            <button class="button">Configurar</button>
+        </div>
+    </div>
+    <div class="razones-linea-internet-container">
+        <h3>¿POR QUÉ CONTRATAR TU LÍNEA DE FIJO CON TELEFÓNICO</h3>
+        <div class="razones-linea-internet">
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Configurar tu tarifa a tu medida</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>La empresa con mejor índice de satisfacción</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Instalación en tu hogar totalmente gratuita</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Nos encargamos de todos lod trámites por ti</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Línea de internet lista para usar 24h después de la contratación</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Si te quedas sin internet te lo arreglamos en persona. Hasta los domingos.</p>
             </div>
         </div>
-        <div class="contacto">
-            <img class="contacto-img" src="../../public/images/slider2.png" >
-            <div class="contacto-info-cont">
-                <h2>Llámanos para más información</h2>
-                <div>
-                    <p>Lunes a Viernes de 8:00 a 21:00</p>
-                    <p>Sábados de 8:00 a 16:00</p>
-                    <h3>900 109 473</h3>
-                </div>
+    </div>
+    <div class="localizador-linea-internet">
+        <h3>O SI LO PREFIERES, PUEDES <strong>ACERCARTE</strong> A ALGUNA DE <strong>NUESTRAS TIENDAS</strong></h3>
+        <div class="buscador-linea-internet">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <div class="info-contact-lineas-internet">
+                <h3>Configura tu tarifa a tu medida</h3>
+                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de internet, de movil o de TV</p>
             </div>
-        </div>
-        <div class="contacto">
-            <img class="contacto-img" src="../../public/images/slider1.png" >
-            <div class="contacto-info-cont">
-                <h2>Escríbenos para cualquier consulta</h2>
-                <div>
-                    <p>Puedes consultar información sobre el proceso de contratación, productos y servicios en cualquier momento utilizando nuestro correo electrónico.</p>
-                    <h3>info@telefonico.com</h3>
-                </div>
-            </div>
+            <button class="button">Configurar</button>
         </div>
     </div>
     
