--- a/Telefonia/public/css/pequeñas-empresas.css
+++ b/Telefonia/public/css/pequeñas-empresas.css
@@ -1,42 +1,102 @@
 .content{
     display: grid;
-    justify-content: center;
-    grid-template-rows: 10% auto;
-    margin: 10vh 0px ; 
-    height: 130vh;
+    grid-template-rows: 2% 5% 25% 8% auto ;
+    margin: 5vh 0px ; 
+    height: 220vh;
 }
 
-.content h1{
+
+.content h2,h1{
     text-align: center;
 }
 
-.tools-container{
+.content h2{
+       font-size: 1.5em;
+}
+
+.tarifas-empresas{
     display: grid;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
+    padding: 5vh 15vh;
+    gap: 15vh;
+}
+
+.tarifa-empresa{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5vh;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.info-tarifa-empresa{
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+
+
+.empresas-banner img{
+    width: 40vh;
+}
+
+
+.empresas-banner h2{
+    color: white;
+    grid-column: 1/6;
+    font-size: 2.2em;
+}
+
+.contacto-empresa-container{
+    margin-top: 5vh;
+    padding: 2vh 40vh;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 100%;
+}
+.contacto-empresa{
+    border: 1px solid #222;
+    border-radius: 1vh;
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
+    align-items: center;
+    padding: 3vh;
+    gap:4vh;
+}
+
+
+.contacto-empresa button{
+    width: 80%;
+    margin-left: -2vh;
+}
+
+.pequeñas-empresas-container{
+    display: grid;
+    grid-template-rows: 45% auto;
     grid-template-columns: 90%;
     justify-content: center;
+    justify-self: center;
     width: 150vh;
     gap: 5vh;
 }
 
-.tool{
-    display: grid;
-    grid-template-columns: 30% 70%;
 
-    height: 30vh;
+.empresa{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    height: 45vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.tool-img{
-    height: 210px;
-    width: 1000px;
+.empresa-img{
+    height: 100%;
+    width: 100%;
 }
 
-.tool-info-cont{
+.empresa-info-cont{
     display: grid;
     justify-content: center;
-    align-items: center;
-    grid-template-rows: 10% 50% 30%;
+    align-items: flex-start;
+    grid-template-rows: 15% 70% 10%;
     padding: 20px;
 }
 
@@ -49,4 +109,4 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-  }
+  } 
