--- a/Telefonia/views/newlayout/linea-internet.html
+++ b/Telefonia/views/newlayout/linea-internet.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/linea-movil.css"/>
+    <link rel="stylesheet" href="../../public/css/linea-internet.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -51,77 +51,82 @@
 
 
 <div class="content">
-    <h1>Línea Móvil</h1>
-    <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS MÓVIL</strong></h2>
-    <div class="tarifas-lineas-movil">
-        <div class="tarifa-linea-movil">
+    <h1>Línea Internet</h1>
+    <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS INTERNET</strong></h2>
+    <div class="tarifas-lineas-internet">
+        <div class="tarifa-linea-internet">
             <h3><strong>19,99 €/mes</strong></h3>
-            <div class="info-tarifa-linea-movil">
+            <div class="info-tarifa-linea-internet">
               <img  src="../../public/images/header/linea-internet.png" alt="">
               <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
             </div>
           <button class="button">Contratar</button>
         </div>
-        <div class="tarifa-linea-movil">
+        <div class="tarifa-linea-internet">
           <h3><strong>29,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
+          <div class="info-tarifa-linea-internet">
             <img  src="../../public/images/header/linea-internet.png" alt="">
             <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
           </div>
         <button class="button">Contratar</button>
       </div>
-      <div class="tarifa-linea-movil">
+      <div class="tarifa-linea-internet">
           <h3><strong>49,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
+          <div class="info-tarifa-linea-internet">
             <img  src="../../public/images/header/linea-internet.png" alt="">
             <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
           </div>
         <button class="button">Contratar</button>
       </div>
     </div>
-    <div class="contacto-linea-movil-container">
-        <div class="contacto-linea-movil">
+    <div class="contacto-linea-internet-container">
+        <div class="contacto-linea-internet">
             <img  src="../../public/images/header/linea-internet.png" alt="">
-            <div class="info-contact-lineas-movil">
+            <div class="info-contact-lineas-internet">
                 <h3>Configura tu tarifa a tu medida</h3>
-                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de movil, de movil o de TV</p>
+                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de internet, de movil o de TV</p>
             </div>
             <button class="button">Configurar</button>
         </div>
     </div>
-    <div class="interes-movil">
-        <h3>TAMBIÉN <strong>PODRÍA INTERESARTE</strong></h3>
-        <div class="interes-container">
-            <div class="interes">
-                <img class="interes-img" src="../../public/images/slider1.png" >
-                <div class="interes-info-cont">
-                    <h2>Roaming</h2>
-                    <div>
-                        <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
-                        <ul>
-                            <li>Activa el roaming en tu SIM</li>
-                            <li>Activa la itinerancia de datos</li>
-                        </ul>
-                    </div>
-                    <button class="button">CONFIGURAR ROAMING</button>
-                </div>
+    <div class="razones-linea-internet-container">
+        <h3>¿POR QUÉ CONTRATAR TU LÍNEA DE FIJO CON TELEFÓNICO</h3>
+        <div class="razones-linea-internet">
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Configurar tu tarifa a tu medida</p>
             </div>
-            <div class="interes">
-                <img class="interes-img" src="../../public/images/slider2.png" >
-                <div class="interes-info-cont">
-                    <h2>Líneas adicionales</h2>
-                    <p>Si dispones de una línea móvil puedes adquirir líneas adicionales con descuento sobre su precio original.</p>
-                    <button class="button">CONTRATAR</button>
-                </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>La empresa con mejor índice de satisfacción</p>
             </div>
-            <div class="interes">
-                <img class="interes-img" src="../../public/images/slider1.png" >
-                <div class="interes-info-cont">
-                    <h2>Bonos GB adicionales</h2>
-                    <p>Si te quedas con datos disponibles en cualquiera de tus líneas móviles puedes adquirir un bono de <strong>1 GB de datos extra</strong> hasta que se renueven tus datos el siguiente més. <strong> Compatible con roaming</strong></p>
-                    <button class="button">CONTRATAR</button>
-                </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Instalación en tu hogar totalmente gratuita</p>
             </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Nos encargamos de todos lod trámites por ti</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Línea de internet lista para usar 24h después de la contratación</p>
+            </div>
+            <div class="razon">
+                <img  src="../../public/images/header/linea-internet.png" alt="">
+                <p>Si te quedas sin internet te lo arreglamos en persona. Hasta los domingos.</p>
+            </div>
+        </div>
+    </div>
+    <div class="localizador-linea-internet">
+        <h3>O SI LO PREFIERES, PUEDES <strong>ACERCARTE</strong> A ALGUNA DE <strong>NUESTRAS TIENDAS</strong></h3>
+        <div class="buscador-linea-internet">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <div class="info-contact-lineas-internet">
+                <h3>Configura tu tarifa a tu medida</h3>
+                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de internet, de movil o de TV</p>
+            </div>
+            <button class="button">Configurar</button>
         </div>
     </div>
     
