metiendo los htmls en la app de node

--- a/Telefonia/public/css/ayuda.css
+++ b/Telefonia/public/css/ayuda.css
@@ -1,4 +1,4 @@
-.content{
+.ayuda-content{
     display: grid;
     justify-content: center;
     grid-template-rows: 10% auto;
@@ -6,7 +6,7 @@
     height: 130vh;
 }
 
-.content h1{
+.ayuda-content h1{
     text-align: center;
 }
 
