--- a/Telefonia/public/css/linea-internet.css
+++ b/Telefonia/public/css/linea-internet.css
@@ -1,4 +1,4 @@
-.content{
+.linea-internet-content{
     display: grid;
     justify-content: center;
     grid-template-rows: 2% 5% 30% 15% 25% auto ;
@@ -6,11 +6,11 @@
     height: 170vh;
 }
 
-.content h1,h2{
+.linea-internet-content h1,h2{
     text-align: center;
 }
 
-.content h2{
+.linea-internet-content h2{
     font-size: 1.2em;
 }
 
