--- a/Telefonia/views/grandes-empresas.html
+++ b/Telefonia/views/grandes-empresas.html
@@ -1,5 +1,5 @@
-<div class="emp-content">
-    <h1>Empresas</h1>
+<div class="content">
+    <h1>Grandes Empresas</h1>
     <div class="empresas-banner">
         <h2>Casos de Éxito</h2>
         <img class="empresa-img" src="./images/slider1.png" >
@@ -8,7 +8,16 @@
         <img class="empresa-img" src="./images/slider1.png" >
         <img class="empresa-img" src="./images/slider1.png" >
     </div>
-
+    <div class="contacto-empresa-container">
+        <div class="contacto-empresa">
+            <img  src="./images/header/linea-internet.png" alt="">
+            <div class="info-contact-empresas">
+                <h3>¿Estás interesado? Contacta con el servicio de ventas.</h3>
+                <p> Contacta con nuestro servicio de ventas y haremos un <strong>estudio personalizados</strong> a tu empresa. De esta forma podremos darte una <strong>oferta única</strong> que se ajuste perfectamente a sus necesidades. Si lo prefieres, puedes llamar al <strong>900 123 123</strong></p>
+            </div>
+            <button class="button">Contactar</button>
+        </div>
+    </div>
     <h2>Servicios para grandes empresas</h2>
     <div class="grandes-empresas-container">
         <div class="empresa">
