--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -5,7 +5,28 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="/css/uikit.css"/>
+    <link rel="stylesheet" href="/css/linea-internet.css"/>
+
+
     <link rel="stylesheet" href="/css/styles.css"/>
+  
+    <link rel="stylesheet" href="/css/linea-movil.css"/>
+    <link rel="stylesheet" href="/css/movilesymas.css"/>
+    <link rel="stylesheet" href="/css/ayuda.css"/>
+    <link rel="stylesheet" href="/css/contacto.css"/>
+    <link rel="stylesheet" href="/css/empresas.css"/>
+    <link rel="stylesheet" href="/css/grandes-empresas.css"/>
+    <link rel="stylesheet" href="/css/pequeñas-empresas.css"/>
+    <link rel="stylesheet" href="/css/mobile.css"/>
+    <link rel="stylesheet" href="/css/objetos.css"/>
+    <link rel="stylesheet" href="/css/packs.css"/>
+    <link rel="stylesheet" href="/css/pedidos.css"/>
+    <link rel="stylesheet" href="/css/preguntas.css"/>
+    <link rel="stylesheet" href="/css/productos.css"/>
+    <link rel="stylesheet" href="/css/test-velocidad.css"/>
+    <link rel="stylesheet" href="/css/tv.css"/> 
+    <link rel="stylesheet" href="/css/tools.css"/> 
+
     <script src="/js/jquery.min.js"></script>
     <script src="/js/uikit.js"></script>
     <script src="/js/uikit-icons.js"></script>
@@ -62,13 +83,13 @@
         <a href="/"><img width="400" src="images/nombre.png" alt=""></a>
     </div>
     <div class="header-contaiter-3">
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Línea Internet</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Línea Móvil</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Línea TV</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Packs</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Móviles y más</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Herramientas</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Ayuda</span></a>
+        <a href="/linea-internet"><img  src="images/header/linea-internet.png" alt=""><span>Línea Internet</span></a>
+        <a href="/linea-movil"><img  src="images/header/linea-internet.png" alt=""><span>Línea Móvil</span></a>
+        <a href="/tv"><img  src="images/header/linea-internet.png" alt=""><span>Línea TV</span></a>
+        <a href="/packs"><img  src="images/header/linea-internet.png" alt=""><span>Packs</span></a>
+        <a href="/movilesymas"><img  src="images/header/linea-internet.png" alt=""><span>Móviles y más</span></a>
+        <a href="/tools"><img  src="images/header/linea-internet.png" alt=""><span>Herramientas</span></a>
+        <a href="/ayuda"><img  src="images/header/linea-internet.png" alt=""><span>Ayuda</span></a>
     </div>
 </header>
 
