--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/linea-movil.css"/>
+    <link rel="stylesheet" href="../../public/css/tv.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -51,80 +51,60 @@
 
 
 <div class="content">
-    <h1>Línea Móvil</h1>
-    <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS MÓVIL</strong></h2>
-    <div class="tarifas-lineas-movil">
-        <div class="tarifa-linea-movil">
-            <h3><strong>19,99 €/mes</strong></h3>
-            <div class="info-tarifa-linea-movil">
-              <img  src="../../public/images/header/linea-internet.png" alt="">
-              <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-            </div>
-          <button class="button">Contratar</button>
+    <h1>TV</h1>
+    <div class="oferta-tv">
+        <div>
+            <h2 class="tvh2">EL MEJOR CONTENIDO CON TV+</h2>
+            <p>Incluye un <strong> decodificador 4k</strong>, posibilidad de <strong>grabar programas, 19 canales de televisón</strong>(más canales tdt) y un pack básico</p>
         </div>
-        <div class="tarifa-linea-movil">
-          <h3><strong>29,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
-            <img  src="../../public/images/header/linea-internet.png" alt="">
-            <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
-      </div>
-      <div class="tarifa-linea-movil">
-          <h3><strong>49,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
-            <img  src="../../public/images/header/linea-internet.png" alt="">
-            <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
-      </div>
-    </div>
-    <div class="contacto-linea-movil-container">
-        <div class="contacto-linea-movil">
-            <img  src="../../public/images/header/linea-internet.png" alt="">
-            <div class="info-contact-lineas-movil">
-                <h3>Configura tu tarifa a tu medida</h3>
-                <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de movil, de movil o de TV</p>
-            </div>
-            <button class="button">Configurar</button>
+        <div>
+            <h2 class="tvh2-price">5,99 €/mes</h2>
+            <button class="button">CONTRATAR</button>
         </div>
     </div>
-    <div class="interes-movil">
-        <h3>TAMBIÉN <strong>PODRÍA INTERESARTE</strong></h3>
-        <div class="interes-container">
-            <div class="interes">
-                <img class="interes-img" src="../../public/images/slider1.png" >
-                <div class="interes-info-cont">
-                    <h2>Roaming</h2>
-                    <div>
-                        <p>Te explicamos todo sobre el roaming para que no te quede ninguna duda, recuerda que aunque viajes a Europa tendrás que seguir estos pasos:</p>
-                        <ul>
-                            <li>Activa el roaming en tu SIM</li>
-                            <li>Activa la itinerancia de datos</li>
-                        </ul>
-                    </div>
-                    <button class="button">CONFIGURAR ROAMING</button>
-                </div>
-            </div>
-            <div class="interes">
-                <img class="interes-img" src="../../public/images/slider2.png" >
-                <div class="interes-info-cont">
-                    <h2>Líneas adicionales</h2>
-                    <p>Si dispones de una línea móvil puedes adquirir líneas adicionales con descuento sobre su precio original.</p>
-                    <button class="button">CONTRATAR</button>
-                </div>
-            </div>
-            <div class="interes">
-                <img class="interes-img" src="../../public/images/slider1.png" >
-                <div class="interes-info-cont">
-                    <h2>Bonos GB adicionales</h2>
-                    <p>Si te quedas con datos disponibles en cualquiera de tus líneas móviles puedes adquirir un bono de <strong>1 GB de datos extra</strong> hasta que se renueven tus datos el siguiente més. <strong> Compatible con roaming</strong></p>
-                    <button class="button">CONTRATAR</button>
-                </div>
+    <div class="tv-llama">
+        <img  src="../../public/images/header/linea-internet.png" alt="">
+        <h3>Si lo prefieres llama al 900 123 123 para contratarlo.</h3>
+    </div>
+    <div class="tools-container">
+        <div class="tool">
+            <img class="tool-img" src="../../public/images/slider1.png" >
+            <div class="tool-info-cont">
+                <h2>Test de Velocidad Internet</h2>
+                <p>Analice la velocidad de su línea de internet y compárela con nuestras tarifas de internet.</p>
+                <button class="button">VER MÁS</button>
             </div>
         </div>
     </div>
-    
+    <div class="tv-card">
+        <img  src="../../public/images/slider2.png" alt="">
+        <div>
+            <h3>Canales incluidos</h3>
+            <div class="canales-incluidos">
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+                <p>FOX</p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!--FOOTER-->
