--- a/Telefonia/views/packs.html
+++ b/Telefonia/views/packs.html
@@ -1,154 +1,42 @@
-
-<section class="uk-section uk-section-default">
-    <div class="uk-container" >
-
-        <div uk-grid>
-
-            <div class="uk-width-1-1">
-                <div class="uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
-                    <div class="uk-flex-last@s uk-card-media-right uk-cover-container uk-width-1-3">
-                        <img src="images/pack.jpg" alt="" uk-cover>
-
-                    </div>
-                    <div class="uk-width-2-3">
-                        <div class="uk-card-body">
-                            <p class="uk-text-lead uk-text-bold">Fibra+TV+Móvil</p>
-                            <p class="uk-text-large">
-                                Los siguientes packs incluyen todos los servicios, Fibra , Televisión y una línea de teléfono móvil junto a un Smartphone básico a elección del cliente.
-                                Todos los packs ofrecen la posibilidad de añadir líneas de teléfono móvil adicionales y de incluir más Smmartphones básicos.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="uk-width-1-1">
-                <div class="uk-card uk-card-default uk-grid-collapse uk-margin" uk-grid>
-                    <div class="uk-card-media-rigth uk-cover-container uk-width-1-3">
-                        <img src="images/fijo.jpg" alt="" uk-cover>
-
-                    </div>
-                    <div class="uk-width-2-3">
-                        <div class="uk-card-body">
-                            <p class="uk-text-lead uk-text-bold">Fibra</p>
-                            <p class="uk-text-large">
-                                Incluye router y línea de teléfono fijo, con llamadas incluidas a fijos y móviles.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="uk-width-1-1">
-                <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1@s " uk-grid>
-                    <div>
-                        <div class="uk-card-body">
-                            <ul uk-accordion="collapsible: true">
-                                <li>
-                                    <a class="uk-accordion-title" href="#">Consulta tu cobertura</a>
-                                    <div class="uk-accordion-content">
-                                        <p>Durante el proceso de contratación podrás <a href="/f_cobertura">saber si la Fibra llega a tu casa introduciendo tu dirección</a>.</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a class="uk-accordion-title" href="#">Haz tu compra Online</a>
-                                    <div class="uk-accordion-content">
-                                        <p>Una vez contratada la tarifa a través de la web, te enviaremos un email de confirmación con los próximos pasos que debes seguir.</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a class="uk-accordion-title" href="#">Cita de instalación</a>
-                                    <div class="uk-accordion-content">
-                                        <p>Una vez contratado, un experto se pondrá en contacto contigo para concretar la fecha de la instalación que más te convenga.</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a class="uk-accordion-title" href="#">Día de instalación.</a>
-                                    <div class="uk-accordion-content">
-                                        <p>El técnico te llevará el router, los extensores de Super WiFi y el decodificador para que lo tengas todo listo.</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="uk-width-1-2">
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-body">
-                        <p class="uk-text-lead uk-text-bold uk-text-center">Configura tu pack</p>
-                        <p class="uk-text-large">
-                        <ul class="uk-list uk-list-divider uk-text-large">
-                            <li><b>Fibra 100Mbps - 1200Mbps simétricos</b></li>
-                            <li>Rounter incluido en el precio</li>
-                            <li>Las líneas de teléfono que necesites</li>
-                        </ul>
-                        </p>
-
-                        <p class="uk-text-large">Fibra desde 21,99€/mes </p>
-                        <a href="/h_configurar_tarifa" class="uk-button uk-button-primary uk-margin-bottom">Consultar condiciones</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="uk-width-1-2">
-                <div class="uk-card uk-card-default uk-grid-collapse uk-margin">
-                    <div class="uk-card-body">
-                        <p class="uk-text-lead uk-text-bold uk-text-center">Pack Básico</p>
-                        <p class="uk-text-large">
-                            <ul class="uk-list uk-list-divider uk-text-large">
-                                <li><b>Fibra 100Mbps simétricos</b></li>
-                                <li>Rounter incluido en el precio</li>
-                                <li>1 Línea teléfono fijo</li>
-                            </ul>
-                        </p>
-                        <p class="uk-text-large">26,99€/mes los 3 primeros meses</p>
-                        <a href="/p_pack_basico" class="uk-button uk-button-primary uk-margin-bottom">Consultar condiciones</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="uk-width-1-2">
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-body">
-                        <p class="uk-text-lead uk-text-bold uk-text-center">Pack Medio</p>
-                        <p class="uk-text-large">
-                        <ul class="uk-list uk-list-divider uk-text-large">
-                            <li><b>Fibra 600Mbps simétricos</b></li>
-                            <li>Rounter incluido en el precio</li>
-                            <li>1 Línea teléfono fijo</li>
-                        </ul>
-                        </p>
-                        <p class="uk-text-large">46,99€/mes los 3 primeros meses</p>
-                        <a href="/p_pack_medio" class="uk-button uk-button-primary uk-margin-bottom">Consultar condiciones</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="uk-width-1-2">
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-body">
-                        <p class="uk-text-lead uk-text-bold uk-text-center">Pack Avanzado</p>
-                        <p class="uk-text-large">
-                        <ul class="uk-list uk-list-divider uk-text-large">
-                            <li><b>Fibra 800Mbps simétricos</b></li>
-                            <li>Rounter incluido en el precio</li>
-                            <li>1 Línea teléfono fijo</li>
-                        </ul>
-                        </p>
-
-                        <p class="uk-text-large">55,99€/mes los 3 primeros meses</p>
-                        <a href="/p_pack_avanzado" class="uk-button uk-button-primary uk-margin-bottom">Consultar condiciones</a>
-                    </div>
-                </div>
-            </div>
-
-
+<div class="packs-content">
+    <h1>Packs Telefónico</h1>
+    <div class="packs-container">
+        <div class="pack">
+            <h2>Pack Básico</h2>
+            <ul>
+                <li>5 GB Internet</li>
+                <li>1 Línea Móvil</li>
+                <li>Pack TV Series</li>
+            </ul>
+            <p>15,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
+        </div>
+        <div class="pack">
+            <h2>Pack Medio</h2>
+            <ul>
+                <li>30 GB Internet</li>
+                <li>1 Línea Móvil</li>
+                <li>Llamadas infinitas</li>
+                <li>Pack TV Series + Infantil</li>
+            </ul>
+            <p>25,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
+        </div>
+        <div class="pack">
+            <h2>Pack Avanzado</h2>
+            <ul>
+                <li>100 GB Internet</li>
+                <li>2 Líneas Móviles</li>
+                <li>Llamadas infinitas</li>
+                <li>Datos ilimitados</li>
+                <li>Pack TV Series + Infantil</li>
+            </ul>
+            <p>37,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
         </div>
     </div>
-</section>
 
+    <h2>Configuta tu pack a medida</h2>
+    <p>Puede acceder a nuestro configurador de packs para personalizar un pack a medida que se ajuste a sus necesidades. </p>
+    <img  src="../../public/images/slider2.png" alt="">
+</div>
